# Django_study

./: pyproject.toml
accounts/templates/accounts/: login.html
app/: admin.py  forms.py  models.py  views.py
app/migrations/: 0001_initial.py  0002_tag_comment_post_tag_set.py
app/templates/app/: base.html  index.html  post_detail.html  post_form.html
mysite/: settings.py  urls.py
